--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     background-color: aliceblue;
     width:48px;
     height:48x;
-    /* border: 1px solid gray */
+    border: 1px solid gray;
 }
 
 .input{
